--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -14,12 +14,15 @@ module:
   ctools: 0
   datetime: 0
   dblog: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  google_analytics: 0
   help: 0
   history: 0
   image: 0
@@ -51,6 +54,7 @@ theme:
   classy: 0
   seven: 0
   bartik: 0
+  drupal8_zymphonies_theme: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
